fix download resume btn alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,7 +231,7 @@ img {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 260px;
+  width: 215px;
 }
 .home__blob {
   fill: var(--first-color);
@@ -255,7 +255,7 @@ img {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
-  padding: 0.75rem 2.5rem;
+  padding: 0.75rem 1.5rem;
   font-weight: var(--font-semi);
   border-radius: 1.5rem;
   transition: 0.3s;
